--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 	</developers>
 
 	<artifactId>next-executions</artifactId>
-	<version>1.0.16-SNAPSHOT</version>
+	<version>1.0.16</version>
 	<packaging>hpi</packaging>
 
 	<repositories>
